plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '7.0.4'
}

group = 'io.github.robbanhoglund'
version = '0.1.0'
description = 'spring-boot-analyzer'

repositories {
    maven { url = 'https://repo.gradle.org/gradle/libs-releases' }
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

springBoot {
    mainClass = 'com.robbanhoglund.springbootanalyzer.SpringBootAnalyzerApplication'
}

bootJar {
    archiveFileName = 'spring-boot-analyzer.jar'
}

dependencies {
    implementation 'info.picocli:picocli:4.7.7'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:7.6.0.202603022253-r'
    implementation 'org.eclipse.jgit:org.eclipse.jgit.ssh.apache:7.6.0.202603022253-r'
    implementation 'org.gradle:gradle-tooling-api:9.5.1'
    implementation 'com.github.javaparser:javaparser-core:3.28.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

tasks.register('installGitHooks', Copy) {
    from 'scripts/hooks'
    into '.git/hooks'
}

compileJava.dependsOn installGitHooks

spotless {
    java {
        googleJavaFormat('1.27.0').aosp().reflowLongStrings().skipJavadocFormatting()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}
